# hybrid-flan-service

./: README.md  dataset.jsonl  ext_agent.py  extractor_dataset.jsonl  intent_dataset.json  main.py  modal_app_hybrid.py  pyproject.toml  seed_training_data.py  sql_agent.py
