[project]
name = "huggy-hybrid"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "datasets>=5.0.0",
    "fastapi>=0.136.3",
    "gliner>=0.2.24",
    "modal>=1.5.0",
    "peft>=0.19.1",
    "torch>=2.12.0",
    "transformers>=5.12.0",
    "uvicorn>=0.49.0",
]
